# delphesprod

./: .gitignore  QUICKSTART.md  README.md  config.example.toml  pyproject.toml  requirements.txt
cards/_template/: delphes.tcl.example  madspin.dat.example  process.mg5
cards/defaults/: delphes_CMS.tcl  pythia8.cmnd
cards/ttbar_allhad/: process.mg5
cards/ttbar_dilep/: process.mg5
cards/ttbar_semilep/: process.mg5
cards/ww/: process.mg5  pythia8.cmnd.example
cards/ww_emu/: process.mg5  run.opts.example
scripts/: 00_gridpack.sh  01_madgraph.sh  02_shower.sh  03_delphes.sh
setup/: env.sh
slurm/: run_chain.sbatch
src/delphesprod/: __init__.py  __main__.py  bootstrap.py  cards.py  chain.py  cli.py  config.py  doctor.py  flatten.py  gridpack.py  manifest.py  submit.py
tests/: test_cards.py  test_config.py  test_flatten.py
